added log and stock pictures to work w ; started work on product card

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,20 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+
+<h1>Product card</h1>
+<div class="card-product">
+  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+  <div class="description-box">
+    <div class="trip-description">
+      <h2>Chill trip to Amsterdam</h2>
+      <p>As of the moment, only the following airlines have been approved to operate Philippines Singapore VTL flights: Singapore Airlines, Scoot, AirAsia, Jetstar Asia, Philippine Airlines, and Cebu Pacific. </p>
+    </div>
+  </div>
+  <div class="informatives">
+    <p>Group size: 5-7 people</p>
+    <p>Date range: 19.04-27.04.2022</p>
+    <p>Planned spending</p> <br/> <p>500-800€</p>
+
+  </div>
+</div>
