--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,11 +10,19 @@
       <h2>Chill trip to Amsterdam</h2>
       <p>As of the moment, only the following airlines have been approved to operate Philippines Singapore VTL flights: Singapore Airlines, Scoot, AirAsia, Jetstar Asia, Philippine Airlines, and Cebu Pacific. </p>
     </div>
+    <div class="tribe">
+      <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" />
   </div>
-  <div class="informatives">
-    <p>Group size: 5-7 people</p>
-    <p>Date range: 19.04-27.04.2022</p>
-    <p>Planned spending</p> <br/> <p>500-800€</p>
-
+  <div class="info-box">
+    <div class="informatives">
+      <p>Group size: 5-7 people</p>
+      <p>Date range: 19.04-27.04.2022</p>
+      <p>Planned spending</p> <br/> <p>500-800€</p>
+    </div>
+    <div class="tribe">
+      <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" />
+      <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" />
+      <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" />
+    </div>
   </div>
 </div>
