banner and searchbar added to homepage, banner scss file created and edited

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div id="bannerhp">
+  <h1>Make friends, save money, travel more.</h1>
+  <button >Search how</button>
+</div>
+
+<div id="searchbarhp-div">
+  <input type="search" name="searchbar" id="searchbarhp" placeholder="Search trips">
+</div>
