--- a/app/assets/stylesheets/components/_card-product.scss
+++ b/app/assets/stylesheets/components/_card-product.scss
@@ -30,30 +30,37 @@
   margin-top: 8px;
 }
 
+.card-product .description-box p {
+  margin-top: 15px;
+}
+
 .description-box {
-  padding: 35px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  padding-right: 25px;
+  padding-top: 35px;
+  padding-left: 35px;
+  padding-bottom: 35px;
 }
 
 .info-box {
-  padding: 35px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  padding-left: 25px;
+  padding-top: 35px;
+  padding-right: 35px;
+  padding-bottom: 35px;
 }
 
 .card-product .trip-description {
-
+  margin-bottom: 75px;
+  display: flex;
+  flex-direction: column;
 }
 
 .card-product .informatives {
-
+  margin-bottom: 25px;
+  margin-top: 50px;
 }
 
 .card-product .tribe {
-
+  margin-top: 25px;
 }
 
 .card-product .trip-infos {
