--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,5 +12,13 @@
 }
 
 .join {
-  font-size: 14px;
+  color: black;
+  opacity: 0.15;
+  text-decoration: none;
+  font-size: 16px;
+  padding: 0px 10px;
+
+  &:hover {
+    opacity: 1;
+  }
 }
