--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,10 @@
-<div class="footer">
+<div class="footer fixed-bottom">
   <div class="footer-links">
     <div>
       <a href="#" class="join">Join The Comunity</a>
     </div>
   </div>
-  <div class="footer-copyright mt-4">
+  <div class="footer-copyright">
    <p>&copy TribeTeam <i class="fas fa-anchor"></i></p>
   </div>
 </div>
