--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,9 @@
-<div class="footer fixed-bottom">
-  <div class="footer-links">
-    <div>
-      <a href="#" class="join">Join The Comunity</a>
-    </div>
+<div class="footer mb-1">
+  <div class="footer-links d-flex">
+    <p class="p_footer">&copy TribeTeam <i class="fas fa-anchor"></i></p>
+    <a href="#" class="join">Join The Comunity</a>
   </div>
   <div class="footer-copyright">
-   <p>&copy TribeTeam <i class="fas fa-anchor"></i></p>
+   <a href="#" class="join">Back to Top</a>
   </div>
 </div>
