--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -17,10 +17,16 @@
   text-decoration: none;
   font-size: 16px;
   padding: 0px 10px;
+
+  &:hover {
+    opacity: 1;
+  }
 }
-.footer-links a:hover {
-  opacity: 1;
+
+.p_footer {
+  margin-bottom: 0;
 }
+
 .footer .fa-anchor {
   color: #D23333;
 }
