--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
     <input type="search" name="searchbar" id="searchbarhp" placeholder="Search trips">
   </div>
 
-  <h1>Product card</h1>
+  <h1 class="text-center pre-card-animation">See trips from all over Rio de Janeiro</h1>
   <div class="card-product">
     <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
     <div class="description-box">
