--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,48 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class="row">
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+    <div class="col-6">
+      <div class="container signup-img">
+             <!--  <%= image_tag asset_path('hs3.jpeg') %>  --> 
+             <%= image_tag asset_path('hs3.jpeg') %>
+      </div>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+    <div class="container col-6 d-flex flex-column justify-content-center">
+      <h2>Sign up</h2>
+
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
+
+      <div class="form-inputs">
+        <%= f.input :full_name,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "Full Name" }%>
+        <%= f.input :user_name,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "User Name" }%>
+        <%= f.input :email,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "Email" }%>
+        <%= f.input :password,
+                    required: true,
+                    hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                    input_html: { autocomplete: "new-password" } %>
+        <%= f.input :password_confirmation,
+                    required: true,
+                    input_html: { autocomplete: "new-password" } %>
+      </div>
+
+      <div class="form-actions d-flex">
+        <%= f.button :submit, "Sign up", class: "btn btn-primary me-2" %>
+        <%= render "devise/shared/links" %>
+      </div>
+        <% end %>
+    </div>
+
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
