new color scheme added to SASS

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,18 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+// color scheme
+
+$pink: #F2C4C4;
+$ligh-green: #75BFBF;
+$dark-green: #308C8C;
+
+$black: #000;
+$white: #fff;
+
+
+// back-up colors
+
+$darker-green: #025159;
+$ligh-blue: #D8E8F2;
