--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,43 +1,47 @@
-<div class="mb-4">
-  <div id="bannerhp">
-    <h1>Make friends, save money, travel more.</h1>
-    <button >Search how</button>
-  </div>
+<div class="wrapper">
+    <div class="mb-4">
+      <div id="bannerhp">
+        <h1>Make friends, save money, travel more.</h1>
+        <button >Search how</button>
+      </div>
+    </div>
 
-  <div id="searchbarhp-div">
-    <input type="search" name="searchbar" id="searchbarhp" placeholder="Search trips">
-  </div>
+    <div class="pre-card-animation">
+      <h1>Trips all over Rio de Janeiro</h1>
+    </div>
 
-<h1>Product card</h1>
-<div class="card-product">
-  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-  <div class="row">
-    <div class="col-sm">
-      <div class="description-box">
-        <div class="trip-description">
-          <h2>Chill trip to Amsterdam</h2>
-          <p>As of the moment, only the following airlines have been approved to operate Philippines Singapore VTL flights: Singapore Airlines, Scoot, AirAsia, Jetstar Asia, Philippine Airlines, and Cebu Pacific. </p>
+  <div class="card-product">
+      <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+    <div class="row">
+        <div class="col-sm">
+          <div class="description-box">
+            <div class="trip-description">
+              <h2>Chill trip to Amsterdam</h2>
+              <p>As of the moment, only the following airlines have been approved to operate Philippines Singapore VTL flights: Singapore Airlines, Scoot, AirAsia, Jetstar Asia, Philippine Airlines, and Cebu Pacific. </p>
+            </div>
+            <div class="tribe">
+              <p>Planned by:</p>
+              <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" />
+            </div>
+          </div>
         </div>
-        <div class="tribe">
-          <p>Planned by:</p>
-          <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" />
+        <div class="col-sm">
+          <div class="info-box">
+          <div class="informatives">
+            <p>Group size: 5-7 people</p>
+            <p>Date range: 19.04-27.04.2022</p>
+            <p>Planned spending</p> <br/> <p>500-800€</p>
+          </div>
+          <div class="tribe">
+            <p>Tribe members</p>
+            <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" />
+            <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" />
+            <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" />
+
+          </div>
         </div>
       </div>
     </div>
-    <div class="col-sm">
-      <div class="info-box">
-      <div class="informatives">
-        <p>Group size: 5-7 people</p>
-        <p>Date range: 19.04-27.04.2022</p>
-        <p>Planned spending</p> <br/> <p>500-800€</p>
-      </div>
-      <div class="tribe">
-        <p>Tribe members</p>
-        <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" />
-        <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" />
-        <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" />
-
-      </div>
-    </div>
   </div>
+  <div class="push"></div>
 </div>
