--- a/app/assets/stylesheets/components/_bannerhp.scss
+++ b/app/assets/stylesheets/components/_bannerhp.scss
@@ -11,23 +11,24 @@
   background-size: cover;
   background-repeat: no-repeat;
   border-radius: 50px;
-  padding-top: 30%;
+  padding-top: 10%;
   // width: 1301px;
   // height: 561px;
-  font-size: 8vw;
+  font-size: 10vw;
+  padding-bottom: 5%;
 }
 
 #bannerhp button {
   // margin: 20px;
   // width: 196px;
   // height: 62px;
-  border-radius: 50px;
+  border-radius: 10px;
   background: white;
   font-size: 2vw;
   min-width: 100px;
   min-height: 30px;
   max-height: 11%;
-  max-width: 25%;
+  max-width: 20%;
   padding: 5px, 15px;
   margin-top: 20px;
   font-weight: lighter;
