search bar nearly done

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -12,7 +12,7 @@ $light-gray: #F4F4F4;
 // color scheme
 
 $pink: #F2C4C4;
-$ligh-green: #75BFBF;
+$light-green: #75BFBF;
 $dark-green: #308C8C;
 
 $black: #000;
