footer is okay for media queries

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -9,7 +9,7 @@
 @import "signup";
 @import "animation";
 @import "search_bar";
-@import "media-queries";
+@import "media_queries";
 
 * {
   font-family: $popins;
