--- a/app/assets/stylesheets/components/_media_queries.scss
+++ b/app/assets/stylesheets/components/_media_queries.scss
@@ -1,13 +1,20 @@
-// === SEARCH BAR === //
-
-// // SMALLER MOBILE SIZE
-@media only screen and (max-width: 375px){
+// SMALLER MOBILE SIZE
+@media only screen and (max-width: 520px){
   .searchButton {
     left: 234px;
   }
 
   .wrapping {
     width: 298px;
+  }
+
+  .footer a, p {
+    font-size: small;
+  }
+
+  .footer {
+    flex-direction: column;
+    margin-top: 40px;
   }
 }
 
@@ -47,4 +54,5 @@
   }
 } 
 
-// === END SEARCH BAR === //
+
+
