--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,16 @@
 <div class="wrapper">
     <div class="mb-4">
       <div id="bannerhp">
-        <h1>Make friends, save money, travel more.</h1>
-        <button >Search how</button>
+        <h1>Make friends, save </h1>
+        <h1>money, travel more.</h1>
+        <div class="btn">
+          Search how
+        </div>
       </div>
     </div>
 
-    <div class="pre-card-animation">
-      <h1>Trips all over Rio de Janeiro</h1>
+    <div >
+      <h1 class="pre-card-animation">Trips all over Rio de Janeiro</h1>
     </div>
 
   <div class="card-product">
