fixing heroku issue

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,8 @@
       </div>
     </div>
 
-    <div >
+    <div>
+      <i class="fas fa-angle-double-down"></i>
       <h1 class="pre-card-animation">Trips all over Rio de Janeiro</h1>
     </div>
 
