--- a/app/assets/stylesheets/components/_animation.scss
+++ b/app/assets/stylesheets/components/_animation.scss
@@ -25,3 +25,13 @@
 }
 
 /*  Got this from CodePen */
+
+// FONT ASWESOME ARROW //
+
+.fa-angle-double-down {
+  font-size: 60px;
+  display: flex;
+  justify-content: center;
+  color: rgba(0, 0, 0, 0.8);
+  margin-bottom: 2em;
+}
