--- a/app/assets/stylesheets/components/_bannerhp.scss
+++ b/app/assets/stylesheets/components/_bannerhp.scss
@@ -1,6 +1,6 @@
 #bannerhp {
   background-image: linear-gradient(rgba(255, 255, 255, 0), black), url('https://whereverfamily.com/wp-content/uploads/2017/12/dreamstime_m_88435486-1030x687.jpg');
-
+  height: 600px;
   display: flex;
   flex-direction: column;
   justify-content: left;
@@ -13,8 +13,7 @@
   color: white;
   background-size: cover;
   background-repeat: no-repeat;
-  border-radius: 50px;
-  font-size: 10vw;
+  border-radius: 25px;
 }
 
 .btn {
