--- a/app/assets/stylesheets/components/search_bar.scss
+++ b/app/assets/stylesheets/components/search_bar.scss
@@ -1,8 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
 body{
   background: $white;
-  font-family: 'Open Sans', sans-serif;
 }
 
 .search {
@@ -32,13 +30,13 @@ body{
   height: 30px;
   // background: $light-green;
   text-align: center;
-  color: $light-green;
+  color: rgba(0, 0, 0, 0.5);
   border-radius: 5px;
   cursor: pointer;
   font-size: 20px;
 
   &:hover {
-    color: $dark-green;
+    color: rgba(0, 0, 0, 0.8);
   }
 }
 
