--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,38 +10,17 @@
       <h1>Trips all over Rio de Janeiro</h1>
     </div>
 
-  <div class="card-product">
-      <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-    <div class="row">
-        <div class="col-sm">
-          <div class="description-box">
-            <div class="trip-description">
-              <h2>Chill trip to Amsterdam</h2>
-              <p>As of the moment, only the following airlines have been approved to operate Philippines Singapore VTL flights: Singapore Airlines, Scoot, AirAsia, Jetstar Asia, Philippine Airlines, and Cebu Pacific. </p>
-            </div>
-            <div class="tribe">
-              <p>Planned by:</p>
-              <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" />
-            </div>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="info-box">
-          <div class="informatives">
-            <p>Group size: 5-7 people</p>
-            <p>Date range: 19.04-27.04.2022</p>
-            <p>Planned spending</p> <br/> <p>500-800€</p>
-          </div>
-          <div class="tribe">
-            <p>Tribe members</p>
-            <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" />
-            <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" />
-            <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" />
-
-          </div>
-        </div>
-      </div>
+  <div class="content">
+    <div class="card">
+        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
     </div>
+
+
+
+
+
+
+      <img id="map" src='https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg'>
   </div>
-  <div class="push"></div>
+    <div class="push"></div>
 </div>
