adding image through github link

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
 
     <div class="col-6">
       <div class="container signup-img">
-             <%= image_tag asset_path('hs3.jpeg') %>
+             <%= image_tag asset_path('https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs3.jpeg') %>
       </div>
     </div>
 
