--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,12 @@
 <div class="wrapper">
     <div class="mb-4">
       <div id="bannerhp">
-        <h1>Make friends, save </h1>
-        <h1>money, travel more.</h1>
+        <div class="banner-h1">
+          <h1>Make friends, save </h1>
+          <h1>money, travel more.</h1>
+        </div>
         <div class="btn">
-          Search how
+          <%= link_to "Search Now", search_path, class: "search-btn" %>
         </div>
       </div>
     </div>
