--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer mt-1">
   <div class="footer-links d-flex">
     <p class="p_footer">&copy TribeTeam <i class="fas fa-anchor"></i></p>
-    <a href="#" class="join">Join The Comunity</a>
+    <%= link_to "Join the Comunity", new_user_registration_path, class: "join" %>
   </div>
   <div class="footer-copyright">
    <a href="#" class="join">Back to Top</a>
