--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
           <h1>money, travel more.</h1>
         </div>
         <div class="btn">
-          <%= link_to "Search Now", search_path, class: "search-btn" %>
+          <%= link_to "Search Now", href="#card-product", class: "search-btn" %>
         </div>
       </div>
     </div>
@@ -16,7 +16,7 @@
       <h1 class="pre-card-animation">Trips all over Rio de Janeiro</h1>
     </div>
 
-  <div class="card-product">
+  <div class="card-product" id="card-product">
       <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
     <div class="row">
         <div class="col-sm">
