I've height 100% and margin 0 to the Body tag. So that footer is sitcky at the bottom

--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,4 +1,4 @@
-<main class="mt-5">
+<main class="mt-5 wrapper">
   <div class="bannerhp">
   
   </div>
@@ -12,4 +12,5 @@
     <div class="btn btn-primary">Edit</div>
     <div class="btn btn-primary">Delete</div>
   </div>
+  <div class="push"></div>
 </main>
