--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,11 +1,21 @@
 // Specific CSS for your home-page
-.content {
-  display: flex;
-}
-
 #map {
   height: 900px;
   width: 515px;
   position: sticky;
   top: 0;
+}
+
+.row {
+  flex-wrap: nowrap;
+}
+
+.container {
+  padding-top: 100px;
+  margin-left: 25px;
+  margin-right: 80px;
+}
+
+.ratings {
+  margin-right: 30px
 }
