--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,26 +1,67 @@
-<div class="wrapper">
-    <div class="mb-4">
-      <div id="bannerhp">
-        <h1>Make friends, save money, travel more.</h1>
-        <button >Search how</button>
+
+<body>
+  <div class="wrapper">
+      <div class="mb-4">
+        <div id="bannerhp">
+          <h1>Make friends, save money, travel more.</h1>
+          <button >Search how</button>
+        </div>
       </div>
+
+      <div class="pre-card-animation">
+        <h1>Trips all over Rio de Janeiro</h1>
+      </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <div class="d-flex bd-highlight">
+              <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+              <div class="p-2 flex-fill bd-highlight">
+                <h2>Chill trip to Amsterdam</h2>
+                <p>As of the moment, only the following airlines have been approved to operate Philippines Singapore VTL flights: lines, Scottish </p>
+                <p>Tribe members:</p>
+                <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" alt="Avatar">
+                <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" alt="Avatar">
+              </div>
+
+              <div class="p-2 flex-fill bd-highlight">
+                <div class="d-flex p-2 bd-highlight">
+                  <div class="d-flex bd-highlight" style="margin-right: 20px;">
+                    <p class="me-1"> 4.3</p>
+                    <i class="mt-1 fas fa-heart"></i>
+                    <i class="mt-1 fas fa-heart"></i>
+                    <i class="mt-1 fas fa-heart"></i>
+                    <i class="mt-1 fas fa-heart"></i>
+                  </div>
+                  <p>200 reviews</p>
+                </div>
+                  <div class="row">
+                    <button type="button" class="me-0 btn btn-small btn-dark">Dark</button>
+                    <button type="button" class="btn btn-small btn-dark">Dark</button>
+                  </div>
+                  <div class="row">
+                    <button type="button" class="me-0 btn btn-small btn-dark">Dark</button>
+                    <button type="button" class="btn btn-small btn-dark">Dark</button>
+                  </div>
+                  <div class="row">
+                    <button type="button" class="me-0 btn btn-small btn-dark">Dark</button>
+                    <button type="button" class="btn btn-small btn-dark">Dark</button>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+
+
+        <div class="col">
+          <img id="map" src='https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg'>
+        </div>
     </div>
-
-    <div class="pre-card-animation">
-      <h1>Trips all over Rio de Janeiro</h1>
-    </div>
-
-  <div class="content">
-    <div class="card">
-        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-    </div>
-
-
-
-
-
-
-      <img id="map" src='https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg'>
+      <div class="push"></div>
   </div>
-    <div class="push"></div>
-</div>
+</body>
