card web size looks pretty, looks like it's done... finally

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -19,3 +19,12 @@
 .ratings {
   margin-right: 30px
 }
+
+.price {
+  padding: 20px 10px 10px 10px;
+  text-align: center;
+}
+
+.infos {
+  padding: 0px;
+}
