--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,8 +20,12 @@
               <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
               <div class="p-2 flex-fill bd-highlight">
                 <h2>Chill trip to Amsterdam</h2>
-                <p>As of the moment, only the following airlines have been approved to operate Philippines Singapore VTL flights: lines, Scottish </p>
-                <p>Tribe members:</p>
+                <p class="mb-3">As of the moment, only the following airlines have been approved to operate Philippines Singapore VTL flights: lines, Scottish </p>
+                <div class="infos">
+                  <p class="mb-2"><strong>Date range: </strong> 19.04-27.04.2022</p>
+                  <p class="mb-3"><strong>Group size: </strong> 5-7 people</p>
+                  <p class="mb-1"><strong> Tribe members:</strong></p>
+                </div>
                 <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" alt="Avatar">
                 <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" alt="Avatar">
               </div>
@@ -49,6 +53,10 @@
                     <button type="button" class="me-0 btn btn-small btn-dark">Dark</button>
                     <button type="button" class="btn btn-small btn-dark">Dark</button>
                   </div>
+                <div class="price">
+                  <p><strong>Estimated price: </strong></p>
+                  <p>500-800€</p>
+                </div>
               </div>
             </div>
           </div>
