--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -67,7 +67,7 @@
 
 
         <div class="col">
-          <img id="map" src='https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg'>
+          <img id="map" src='https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/Map%20placeholder.png'>
         </div>
     </div>
       <div class="push"></div>
