readjusted card info positions and font sizes

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -17,12 +17,12 @@
   margin-right: 80px;
 }
 
-.ratings {
-  margin-right: 30px
+#rating {
+  margin-top: 30px;
 }
 
 .price {
-  padding: 20px 10px 10px 10px;
+  padding: 20px 10px 30px 10px;
   text-align: center;
 }
 
