--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -20,3 +20,19 @@
   width: 50px;
   border-radius: 50%;
 }
+
+.card p {
+  font-size: 13px;
+}
+
+.card h2 {
+  font-size: 28px;
+}
+
+.card h3 {
+  font-size: 18px;
+}
+
+.card h4 {
+  font-size: 16px;
+}
