--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,44 +19,47 @@
           <div class="card">
             <div class="d-flex bd-highlight">
               <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-              <div class="p-2 flex-fill bd-highlight">
-                <h2>Chill trip to Amsterdam</h2>
-                <p class="mb-3">As of the moment, only the following airlines have been approved to operate Philippines Singapore VTL flights: lines, Scottish </p>
+              <div class="p-3 flex-fill bd-highlight">
+                <h2 class="pb-2"><strong>Chill trip to Amsterdam</strong></h2>
+                <ul>
+                  <li><h4 class="mb-2 mt-1"> Mar 7 - 27 (20 days)</h4></li>
+                  <li><h4 class="mb-2 mt-1"> 5-7 people</h4></li>
+                </ul>
                 <div class="infos">
-                  <p class="mb-2"><strong>Date range: </strong> 19.04-27.04.2022</p>
-                  <p class="mb-3"><strong>Group size: </strong> 5-7 people</p>
-                  <p class="mb-1"><strong> Tribe members:</strong></p>
+                  <p class="mb-3 mt-4 pe-3">As of the moment, only the following airlines have been approved to operate Philippines Singapore VTL flights: lines, Scottish </p>
+                  <p class="mb-1 mt-2"> Tribe members:</p>
                 </div>
                 <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" alt="Avatar">
                 <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" alt="Avatar">
               </div>
 
-              <div class="p-2 flex-fill bd-highlight">
-                <div class="d-flex p-2 bd-highlight">
-                  <div class="d-flex bd-highlight" style="margin-right: 20px;">
+              <div class="p-3 flex-fill bd-highlight">
+                <div class="d-flex p-1 pt-2 mb-4 ms-4 bd-highlight">
+                  <div class="d-flex bd-highlight">
                     <p class="me-1"> 4.3</p>
-                    <i class="mt-1 fas fa-heart"></i>
-                    <i class="mt-1 fas fa-heart"></i>
-                    <i class="mt-1 fas fa-heart"></i>
-                    <i class="mt-1 fas fa-heart"></i>
+                    <i class="pb-1 fas fa-heart"></i>
+                    <i class="pb-1 fas fa-heart"></i>
+                    <i class="pb-1 fas fa-heart"></i>
+                    <i class="pb-1 fas fa-heart"></i>
                   </div>
-                  <p>200 reviews</p>
+                  <p class="ms-3">200 reviews</p>
                 </div>
-                  <div class="row">
-                    <button type="button" class="me-0 btn btn-small btn-dark">Dark</button>
-                    <button type="button" class="btn btn-small btn-dark">Dark</button>
-                  </div>
-                  <div class="row">
-                    <button type="button" class="me-0 btn btn-small btn-dark">Dark</button>
-                    <button type="button" class="btn btn-small btn-dark">Dark</button>
-                  </div>
-                  <div class="row">
-                    <button type="button" class="me-0 btn btn-small btn-dark">Dark</button>
-                    <button type="button" class="btn btn-small btn-dark">Dark</button>
+                  <div class= "mt-4 mb-2">
+                    <div class="row mb-1">
+                      <button type="button" class="me-0 btn btn-small btn-dark">Dark</button>
+                      <button type="button" class="btn btn-small btn-dark">Dark</button>
+                    </div>
+                    <div class="row mb-1">
+                      <button type="button" class="me-0 btn btn-small btn-dark">Dark</button>
+                      <button type="button" class="btn btn-small btn-dark">Dark</button>
+                    </div>
+                    <div class="row">
+                      <button type="button" class="me-0 btn btn-small btn-dark">Dark</button>
+                      <button type="button" class="btn btn-small btn-dark">Dark</button>
+                    </div>
                   </div>
                 <div class="price">
-                  <p><strong>Estimated price: </strong></p>
-                  <p>500-800€</p>
+                  <h3>500-800€</h3>
                 </div>
               </div>
             </div>
@@ -68,4 +71,3 @@
     </div>
       <div class="push"></div>
   </div>
-
