trying out different banner pictures

--- a/app/assets/stylesheets/components/_bannerhp.scss
+++ b/app/assets/stylesheets/components/_bannerhp.scss
@@ -1,5 +1,5 @@
 #bannerhp {
-  background-image: linear-gradient(rgba(255, 255, 255, 0), black), src('app/assets/images/banner-compressed.png');
+  background-image: linear-gradient(rgba(255, 255, 255, 0), black), src('https://whereverfamily.com/wp-content/uploads/2017/12/dreamstime_m_88435486-1030x687.jpg');
   height: 600px;
   display: flex;
   flex-direction: column;
