--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
         <h1>Trips all over Rio de Janeiro</h1>
       </div>
 
-    <div class="container">
+    <div class=" mt-5 me-1 container">
       <div class="row">
         <div class="col">
           <div class="card">
