map dissapears after smaller than tablet screen

--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -1,7 +1,7 @@
 .card {
   overflow: hidden;
   height: 300px;
-  width: 850px;
+  width: 55vw;
   background: white;
   /* box-shadow: 0 0 15px rgb(0 0 0 / 20%); */
   // display: flex;
@@ -26,7 +26,7 @@
 }
 
 .card h2 {
-  font-size: 28px;
+  font-size: 22px;
 }
 
 .card h3 {
