--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
         <h1>Trips all over Rio de Janeiro</h1>
       </div>
 
-    <div class=" mt-5 me-1 container">
+    <div class=" mt-5 me-3 ml-3 container">
       <div class="row">
         <div class="col">
           <div class="card">
@@ -23,10 +23,10 @@
                   <li><h4 class="mb-2 mt-1"> Mar 7 - 27 (20 days)</h4></li>
                   <li><h4 class="mb-2 mt-1"> 5-7 people</h4></li>
                 </ul>
-                <div class="infos">
-                  <p class="mb-3 mt-4 pe-3">As of the moment, only the following airlines have been approved to operate Philippines Singapore VTL flights: lines, Scottish </p>
-                  <p class="mb-1 mt-2"> Tribe members:</p>
-                </div>
+                  <div id="infos">
+                    <p class="mb-3 mt-3 pe-3">As of the moment, only the following airlines have been approved to operate Philippines Singapore VTL flights: lines, Scottish </p>
+                    <p class="mb-1 mt-2"> Tribe members:</p>
+                  </div>
                 <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" alt="Avatar">
                 <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" alt="Avatar">
               </div>
@@ -64,7 +64,9 @@
           </div>
         </div>
         <div class="col">
-          <img id="map" src='https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/Map%20placeholder.png'>
+          <div class="d-none d-md-block">
+            <img id="map" src='https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/Map%20placeholder.png'>
+          </div>
         </div>
     </div>
       <div class="push"></div>
