Deleted the container class from the search div

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,7 +6,7 @@
       <% end %>
     </div>
 
-    <div class="wrapping container">
+    <div class="wrapping">
       <div class="search row">
           <input type="text" class="searchTerm col" placeholder="search...">
           <div type="submit" class="searchButton col">
