--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,28 +11,36 @@
         <h1>Trips all over Rio de Janeiro</h1>
       </div>
 
-    <div class="container">
+    <div class="container card-map">
       <div class="row">
+
+       <!-- CARD STARTS HERE-->
+
         <div class="col">
           <div class="card">
-            <div class="d-flex bd-highlight">
+            <div class="d-flex bd-highlight card-div">
               <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
               <div class="p-3 flex-fill bd-highlight">
-                <h2 class="pb-2"><strong>Chill trip to Amsterdam</strong></h2>
+                <h2 class="pb-2 trip-title"><strong>Chill trip to Amsterdam</strong></h2>
                 <ul>
                   <li><h4 class="mb-2 mt-1"> Mar 7 - 27 (20 days)</h4></li>
                   <li><h4 class="mb-2 mt-1"> 5-7 people</h4></li>
                 </ul>
                 <div class="infos">
-                  <p class="mb-3 mt-4 pe-3">As of the moment, only the following airlines have been approved to operate Philippines Singapore VTL flights: lines, Scottish </p>
-                  <p class="mb-1 mt-2"> Tribe members:</p>
+                  <p class="mb-3 mt-4 pe-3 description">As of the moment, only the following airlines have been approved to operate Philippines Singapore VTL flights: lines, Scottish </p>
                 </div>
-                <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" alt="Avatar">
-                <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" alt="Avatar">
+
+                <div class="members">
+                  <p class="mb-1 mt-2"> Tribe members:</p>
+
+                  <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" alt="Avatar">
+                  <img class="profile-icon" src="https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/hs1.jpeg" alt="Avatar">                  
+                </div>
+
               </div>
 
               <div class="p-3 flex-fill bd-highlight">
-                <div class="d-flex p-1 pt-2 mb-4 ms-4 bd-highlight">
+                <div class="d-flex p-1 pt-2 mb-4 ms-4 bd-highlight ratings">
                   <div class="d-flex bd-highlight">
                     <p class="me-1"> 4.3</p>
                     <i class="pb-1 fas fa-heart"></i>
@@ -42,7 +50,7 @@
                   </div>
                   <p class="ms-3">200 reviews</p>
                 </div>
-                  <div class= "mt-4 mb-2">
+                  <div class= "mt-4 mb-2 trip-tags">
                     <div class="row mb-1">
                       <button type="button" class="me-0 btn btn-small btn-dark">Dark</button>
                       <button type="button" class="btn btn-small btn-dark">Dark</button>
@@ -63,7 +71,10 @@
             </div>
           </div>
         </div>
-        <div class="col">
+
+        <!-- MAP STARTS HERE-->
+
+        <div class="map">
           <img id="map" src='https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/Map%20placeholder.png'>
         </div>
     </div>
