--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -40,3 +40,12 @@
 .card li {
   list-style-type: none;
 }
+
+.link_to_class {
+  text-decoration: none;
+  color: inherit;
+
+  &:hover{
+    color: rgba(0, 0, 0, 0.5);
+  }
+}
