--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,6 +17,7 @@
        <!-- CARD STARTS HERE-->
 
         <div class="col">
+        <%= link_to trips_path(@trip), class: "link_to_class" do %>
           <div class="card">
             <div class="d-flex bd-highlight card-div">
               <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
@@ -70,6 +71,7 @@
               </div>
             </div>
           </div>
+          <% end %>
         </div>
 
         <!-- MAP STARTS HERE-->
