--- a/app/assets/stylesheets/components/_signup.scss
+++ b/app/assets/stylesheets/components/_signup.scss
@@ -1,16 +1,32 @@
 .signup-img {
   border: 2px solid #007074;
   overflow: hidden;
-  padding: 0;
-  // background-image: url(../../images/hs3.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-
   height: 600px;
 
   &:img {
     max-width: 100%;
     max-height: 100%;
   }
+}
+
+.sign-box {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.sing_title {
+  text-align: center;
+}
+
+.sign-btn {
+  justify-content: center;
+}
+
+.sign-img{
+  object-fit: cover;
+  height: 600px;
+  width: 100%;
 }
