added basic layout of the showpage before going to complex tasks-carousel

--- a/app/assets/stylesheets/components/_bannerhp.scss
+++ b/app/assets/stylesheets/components/_bannerhp.scss
@@ -1,6 +1,6 @@
 #bannerhp {
   background-image: linear-gradient(rgba(255, 255, 255, 0), black), url('https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/tst-r.jpeg');
-  width: 98%;
+  // width: 98%;
   height: auto;
   display: flex;
   flex-direction: column;
