Both sign in and up pages are done

--- a/app/assets/stylesheets/components/_signup.scss
+++ b/app/assets/stylesheets/components/_signup.scss
@@ -12,9 +12,9 @@
   }
 }
 
+
 .sign-box {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 }
 
 .sing_title {
@@ -23,6 +23,7 @@
 
 .sign-btn {
   justify-content: center;
+  align-items: baseline;
 }
 
 .sign-img{
