--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -6,9 +6,13 @@
 
 .carousel-item .card {
   width: 100%;
-  max-width: 300px;
+  max-width: 250px;
 }
 
 .carousel-item .container {
   padding-top: 0px;
+}
+
+.row {
+  justify-content: center;
 }
