--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -30,7 +30,7 @@
     </div>
     <div class="container mb-4 ml-4">
       <div class="row g-2">
-        <div class="col-2">
+        <div class="col-2" style="padding-top: 200px;">
           <h1>To do: </h1>
         </div>
                 <!-- Carousel wrapper -->
