start working on the show

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -65,7 +65,7 @@
           </div>
           <% end %>
         </div>
-        <div class="col">
+        <div class="col map">
           <img id="map" src='https://raw.githubusercontent.com/Edwardtoonela/travel-tribe/master/app/assets/images/Map%20placeholder.png'>
         </div>
     </div>
