migrated name and mguests to trips model + updated seed

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,7 +19,7 @@
             <div class="d-flex bd-highlight">
               <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
               <div class="p-3 flex-fill bd-highlight">
-                <h2 class="pb-2"><strong>Chill trip to Amsterdam</strong></h2>
+                <h2 class="pb-2"><strong> <%= trip.name %></strong></h2>
                 <ul>
                   <li><h4 class="mb-2 mt-1"> Mar 7 - 27 (20 days)</h4></li>
                   <li><h4 class="mb-2 mt-1"> 5-7 people</h4></li>
@@ -66,7 +66,7 @@
           <% end %>
         </div>
 
-        <!-- MAP STARTS HERE --> 
+        <!-- MAP STARTS HERE -->
 
         <div class="map">
 
