--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
       </div>
 
     <div class="container">
-      <div class="row">
+      <div class="row" style="flex-direction: column;">
       <% @trips.each do |trip| %>
         <div class="col">
         <%= link_to trips_path(trip), class: "link_to_class" do %>
