--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="row" style="flex-direction: column;">
       <% @trips.each do |trip| %>
-        <div class="col">
+        <div class="col mt-1 mb-4">
         <%= link_to trips_path(trip), class: "link_to_class" do %>
           <div class="card">
             <div class="d-flex bd-highlight">
