--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -134,9 +134,13 @@ section .box .image img{
   background: $light-gray;
 }
 
+.carousel-wrapper{
+  position: relative;
+}
+
 .swiper-pagination{
   position: absolute;
-  top: 1615px;
+  top: 1785px;
   
 }
 
@@ -151,7 +155,7 @@ section .box .image img{
   opacity: 0.7;
   color: $light-gray;
   transition: all 0.3s ease;
-  top: 1330px;
+  top: 1575px;
 }
 .swiper-button-next:hover, .swiper-button-prev:hover{
   opacity: 1;
