--- a/app/assets/stylesheets/components/trip_owner.scss
+++ b/app/assets/stylesheets/components/trip_owner.scss
@@ -1,15 +1,19 @@
+
 .banner-owner{
   display: flex;
   align-items: center;
 }
 
 .trip-owner{
-  width: 642.09px;
-  height: 412.71px;
+  width: 572.09px;
+  height: 373.71px;
   
   background: #FFFFFF;
   box-shadow: 0px 10px 20px rgba(0, 95, 183, 0.3);
   border-radius: 30px;
+}
+.owner-card {
+  position:relative;
 }
 
 .profile-img{
@@ -17,8 +21,8 @@
   padding: 3px;
   background: $white;
   position: absolute;
-  left: 625px;
-  top: 65px;
+  left: 210px;
+  top: -40px;
   height: 170px;
   width: 170px;
   box-shadow: 2px 3px rgba(0, 0, 0, 0.3);
@@ -30,4 +34,19 @@
   object-fit: cover;
   border-radius: 50%;
   // border: 1px solid #fff;
+}
+
+.owner {
+  color: rgba(0, 0, 0, 0.8);
+  font-size: 25px;
+  margin-top: 150px;
+}
+
+.description {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.icon {
+  fill: rgba(0, 0, 0, 0.6);
+  font-size: 30px;
 }
