added price to card on homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -56,7 +56,8 @@
                     </div>
                   </div>
                 <div class="price">
-                  <h3>500-800€</h3>
+                  <p>Price estimate: </p>
+                  <h3> <%= trip.price_min %> - <%= trip.price_max %></h3>
                 </div>
               </div>
             </div>
